# rust_intfic

./: Cargo.toml  LICENSE  README.md
resources/: example_1.txt  example_2.txt  test.txt
src/: game_state.rs  lib.rs  main.rs  parse_file.rs  parse_input.rs  story_block.rs  tests.rs  write_out.rs
