[package]
name = "rust_intfic"
version = "0.2.1"
authors = ["Trevan Haskell <dev@trevanhaskell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.3"
dirs = "2.0.2"
rand = "0.7.3"
ron = "0.6.0"
text_io = "0.1.8"
serde = "1.0.111"
