[package]
edition = "2018"
name = "rust_intfic"
version = "0.3.1"
authors = ["Trevan Haskell <dev@trevanhaskell.com>"]
description = "An interactive fiction framework written in Rust"
repository = "https://github.com/tjhaskel/rust_intfic"
readme = "README.md"
license = "MIT"

[dependencies]
colored = "1.9.3"
dirs = "2.0.2"
rand = "0.7.3"
ron = "0.6.0"
text_io = "0.1.8"
serde = "1.0.111"
